# Bona-SoftwareRenderer

./: .gitignore  README.md
Bona/: CMakeLists.txt  application.cpp  application.h  main.cpp
Bona/pipeline/: CMakeLists.txt  input_assembler.cpp  input_assembler.h  rasterize.cpp  rasterize.h  render_resource.cpp  render_resource.h
Bona/shaders/: shader.h
Bona/util/: CMakeLists.txt  color.cpp  color.h  frame_buffer.cpp  frame_buffer.h  geometry.h  tgaimage.cpp  tgaimage.h  triangle.cpp  triangle.h  window.cpp  window.h
